// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Form /> should render correctly when params not passed 1`] = `
<DocumentFragment>
  <form
    novalidate=""
  >
    <h1>
      Please provide AWS Cognito account details:
    </h1>
    <input
      name="username"
      placeholder="Username"
      required=""
      type="text"
      value=""
    />
    <input
      name="password"
      placeholder="Password"
      required=""
      type="password"
      value=""
    />
    <button
      class="button"
      type="submit"
    >
      Login
    </button>
  </form>
</DocumentFragment>
`;

exports[`<Form /> should render correctly with params and login error 1`] = `
<DocumentFragment>
  <form
    novalidate=""
  >
    <h1>
      Please provide AWS Cognito account details:
    </h1>
    <input
      name="username"
      placeholder="Username"
      required=""
      type="text"
      value=""
    />
    <input
      name="password"
      placeholder="Password"
      required=""
      type="password"
      value=""
    />
    <div
      class="login__error"
    />
    <button
      class="button"
      type="submit"
    >
      Login
    </button>
  </form>
</DocumentFragment>
`;

exports[`<Form /> should render correctly with params and no login error 1`] = `
<DocumentFragment>
  <form
    novalidate=""
  >
    <h1>
      Please provide AWS Cognito account details:
    </h1>
    <input
      name="username"
      placeholder="Username"
      required=""
      type="text"
      value=""
    />
    <input
      name="password"
      placeholder="Password"
      required=""
      type="password"
      value=""
    />
    <button
      class="button"
      type="submit"
    >
      Login
    </button>
  </form>
</DocumentFragment>
`;
